--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,114 @@
 
   </properties>
 
+  <!-- OS/ARCHITECTURE PROFILES FOR SWT -->
+  <profiles>
+    <!-- WINDOWS PROFILES -->
+    <profile>
+      <id>Win86</id>
+      <activation>
+        <os>
+          <family>windows</family>
+          <arch>x86</arch>
+        </os>
+      </activation>
+      <properties>
+        <swt.artifactId>org.eclipse.swt.win32.win32.x86</swt.artifactId>
+        <profile.id>Win86</profile.id>
+      </properties>
+    </profile>
+    <profile>
+      <id>Win64</id>
+      <activation>
+        <os>
+          <family>windows</family>
+          <arch>amd64</arch>
+        </os>
+      </activation>
+      <properties>
+        <swt.artifactId>org.eclipse.swt.win32.win32.x86_64</swt.artifactId>
+        <profile.id>Win64</profile.id>
+      </properties>
+    </profile>
+
+    <!-- LINUX PROFILES -->
+    <profile>
+      <id>Linux86</id>
+      <activation>
+        <os>
+          <family>Linux</family>
+          <arch>x86</arch>
+        </os>
+      </activation>
+      <properties>
+        <swt.artifactId>org.eclipse.swt.gtk.linux.x86</swt.artifactId>
+        <profile.id>Linux86</profile.id>
+      </properties>
+    </profile>
+    <profile>
+      <id>Linux64</id>
+      <activation>
+        <os>
+          <family>Linux</family>
+          <arch>amd64</arch>
+        </os>
+      </activation>
+      <properties>
+        <swt.artifactId>org.eclipse.swt.gtk.linux.x86_64</swt.artifactId>
+        <profile.id>Linux64</profile.id>
+      </properties>
+    </profile>
+
+    <!-- MAC OSX PROFILES -->
+    <profile>
+      <id>MacOSX86</id>
+      <activation>
+        <os>
+          <family>MacosX</family>
+          <arch>x86</arch>
+        </os>
+      </activation>
+      <properties>
+        <swt.artifactId>org.eclipse.swt.cocoa.macosx</swt.artifactId>
+        <profile.id>MacOSX86</profile.id>
+      </properties>
+    </profile>
+    <profile>
+      <id>MacOSX64</id>
+      <activation>
+        <os>
+          <family>MacosX</family>
+          <arch>amd64</arch>
+        </os>
+      </activation>
+      <properties>
+        <swt.artifactId>org.eclipse.swt.cocoa.macosx.x86_64</swt.artifactId>
+        <profile.id>MacOSX64</profile.id>
+      </properties>
+    </profile>
+  </profiles>
+
+  <!-- REPOSITORIES -->
+  <repositories>
+    <repository>
+      <id>swt-repo</id>
+      <url>https://swt-repo.googlecode.com/svn/repo/</url>
+    </repository>
+  </repositories>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.eclipse.swt</groupId>
+      <artifactId>${swt.artifactId}</artifactId>
+      <version>3.7.2</version>
+    </dependency>
+   <dependency>
+      <groupId>org.eclipse.jface</groupId>
+      <artifactId>org.eclipse.jface</artifactId>
+      <version>3.7.0.v20110928-1505</version>
+   </dependency>
+  </dependencies>
+
   <distributionManagement>
     <repository>
       <id>internal.repo</id>
