--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
   <repositories>
     <repository>
       <id>swt-repo</id>
-      <url>https://swt-repo.googlecode.com/svn/repo/</url>
+      <url>https://raw.githubusercontent.com/maven-eclipse/swt-repo/master/</url>
     </repository>
   </repositories>
 
@@ -137,7 +137,7 @@
    <dependency>
       <groupId>org.eclipse.jface</groupId>
       <artifactId>org.eclipse.jface</artifactId>
-      <version>3.7.0.v20110928-1505</version>
+      <version>3.8.0.v20120521-2329</version>
    </dependency>
   </dependencies>
 
